Reclassify the FIM

--- a/Flood Impact Map.ipynb
+++ b/Flood Impact Map.ipynb
@@ -657,6 +657,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "3b3c9c9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reclassified FIM raster has been saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import rasterio\n",
+    "\n",
+    "def reclassify_fim(input_path, output_path):\n",
+    "    with rasterio.open(input_path) as src:\n",
+    "        data = src.read(1).astype('float32')\n",
+    "        nodata = src.nodata\n",
+    "\n",
+    "        if nodata is not None:\n",
+    "            data = np.ma.masked_equal(data, nodata)\n",
+    "        \n",
+    "        # Reclassify the FIM data\n",
+    "        reclassified_data = np.digitize(data, bins=[0.01, 0.5, 1, 2], right=True)\n",
+    "        reclassified_data = np.where(data == 0, 0, reclassified_data)  # Class 0 for non-flooded areas\n",
+    "\n",
+    "        # Preserve nodata values\n",
+    "        reclassified_data = np.ma.filled(reclassified_data, nodata)\n",
+    "\n",
+    "        meta = src.meta\n",
+    "        meta.update(dtype='float32', nodata=-9999)\n",
+    "\n",
+    "        with rasterio.open(output_path, 'w', **meta) as dst:\n",
+    "            dst.write(reclassified_data.astype('float32'), 1)\n",
+    "\n",
+    "fim_raster_path = r'D:/Hesham/CUAHSI/Geospatial/Jupyter N3/fim_raster.tif'\n",
+    "reclassified_fim_path = r'D:/Hesham/CUAHSI/Geospatial/Jupyter N4/reclassified_fim_raster2.tif'\n",
+    "\n",
+    "reclassify_fim(fim_raster_path, reclassified_fim_path)\n",
+    "print(\"Reclassified FIM raster has been saved.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "675b0c99-8e3c-4c91-b3d6-95f072c392b1",
    "metadata": {},
