Confirm impact shapefile creation

--- a/Flood Impact Map.ipynb
+++ b/Flood Impact Map.ipynb
@@ -1036,15 +1036,23 @@
    "id": "a5cfa8b7-79ec-46f1-99b7-d7689559a649",
    "metadata": {},
    "source": [
-    "#### Step 4: convert the FIV raster to shapefile "
+    "#### Step 4: convert the impact raster map to shapefile "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "72168447-19d4-4b15-a1a7-a1e477995fa4",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hhp1483\\AppData\\Local\\anaconda3\\envs\\py310\\lib\\site-packages\\osgeo\\gdal.py:312: FutureWarning: Neither gdal.UseExceptions() nor gdal.DontUseExceptions() has been explicitly called. In GDAL 4.0, exceptions will be enabled by default.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1101,8 +1109,8 @@
     "    dst_ds = None\n",
     "\n",
     "# Path to the reclassified impact raster file\n",
-    "reclassified_raster_path = r'D:/Hesham/CUAHSI/Geospatial/Jupyter N3/reclassified_impact_raster.tif'\n",
-    "shapefile_path = r'D:/Hesham/CUAHSI/Geospatial/Jupyter N3/reclassified_impact_raster.shp'\n",
+    "reclassified_raster_path = r'D:/Hesham/CUAHSI/Geospatial/Jupyter N4/classified_impact_raster1.tif'\n",
+    "shapefile_path = r'D:/Hesham/CUAHSI/Geospatial/Jupyter N4/reclassified_impact_raster.shp'\n",
     "\n",
     "\n",
     "# Convert the reclassified raster to a shapefile\n",
@@ -1120,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "c15827a4-b333-4944-9119-b79f34f1e7d4",
    "metadata": {},
    "outputs": [
@@ -1169,19 +1177,11 @@
     "    print(\"Vulnerability level column has been added to the shapefile.\")\n",
     "\n",
     "# Path to the shapefile\n",
-    "shapefile_path = r'D:/Hesham/CUAHSI/Geospatial/Jupyter N3/reclassified_impact_raster.shp'\n",
+    "shapefile_path = r'D:/Hesham/CUAHSI/Geospatial/Jupyter N4/reclassified_impact_raster.shp'\n",
     "\n",
     "# Add the vulnerability level column\n",
     "add_vulnerability_column(shapefile_path)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f88bdb8a-3565-4556-a47e-d02959a6b6d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
