added some comments

--- a/import_18hr_highflow_forecast.ipynb
+++ b/import_18hr_highflow_forecast.ipynb
@@ -173,21 +173,43 @@
     "\n",
     "transposed_columns = maxflowpredictions.T\n",
     "\n",
-    "# Specify the datetime string you want to use\n",
-    "new_datetime = '2024-06-25 12:50:32 EDT'\n",
+    "# Specify the datetime string you want to use, or use the current datetime\n",
+    "#from datetime import datetime\n",
+    "#datetime = datetime.now()\n",
+    "datetime = '2024-06-25 00:00:00'\n",
+    "print(datetime)\n",
     "\n",
     "# Rename 'max_flow' to the specified datetime\n",
-    "forecastinput = transposed_columns.rename(index={'max_flow': new_datetime})\n",
+    "forecastinput = transposed_columns.rename(index={'max_flow': datetime})\n",
     "print(forecastinput.head())\n",
     "\n",
     "## export the data to a csv file with the date and time in the filename\n",
     "# Replace invalid filename characters in new_datetime\n",
-    "filename_datetime = new_datetime.replace(' ', '_').replace(':', '_')\n",
+    "filename_datetime = datetime.replace(' ', '_').replace(':', '_')\n",
     "# Format the filename string to include new_datetime\n",
     "filename = f'forecast_input_{filename_datetime}.csv'\n",
     "print(filename)\n",
     "# Export forecastinput as a CSV file with the formatted name\n",
     "forecastinput.to_csv(filename, sep=',', index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-06-26 18:37:46.696356\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "new_datetime = datetime.now()\n",
+    "print(new_datetime)"
    ]
   }
  ],
