--- a/import_18hr_highflow_forecast.ipynb
+++ b/import_18hr_highflow_forecast.ipynb
@@ -1,11 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code will import the 18hr highflow forecast from the NWM "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# edit code so that it runs automatically every hour\n",
     "# use python.12.4 kernel"
    ]
@@ -29,6 +37,8 @@
     "import geopandas as gpd\n",
     "\n",
     "# Construct the query URL\n",
+    "# this is the url for the 18 hour forecast of the NWM. Then make sure to add /0/query to the end of the url\n",
+    "# e.g. https://url_here/0/query\n",
     "query_url = \"https://maps.water.noaa.gov/server/rest/services/nwm/srf_18hr_max_high_flow_magnitude/MapServer/0/query\"\n",
     "params = {\n",
     "    'where': '1=1',\n",
