5 day forecast is now complete
5 day forecast should now be all encompassing to pull data from the website, and produce an Impact map

--- a/import_18hr_highflow_forecast.ipynb
+++ b/import_18hr_highflow_forecast.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# This is designed to import the forecast data from the National Weather Service and prepare it to be fed into handfim\n",
     "# edit code so that it runs automatically every hour\n",
     "# use python.12.4 kernel"
    ]
@@ -100,41 +100,6 @@
    "source": [
     "# Export GeoDataFrame as a Shapefile\n",
     "predictions.to_file(\"C:/Users/Lyn/Documents/Programming/Python_codes/CUAHSI Summer Institute 2024/18hr_highflow_test.shp\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Import usgs current streamflow data to combine with the flood discharge predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import from the website and save as a csv (comma seperated) in x location"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read csv\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Replace 'path/to/your_file.csv' with the actual file path\n",
-    "usgs = pd.read_csv('C:/Users/Lyn/Documents/Homework/UMass/CUAHSI_2024/forecastdata/streamflow_texas_06252024.csv')\n",
-    "\n",
-    "print(df.head())\n",
-    "\n",
-    "# Remove the header\n",
-    "usgs.drop(index=range(0, 29), inplace=True)  # Removes the header\n",
-    "print(df.head())"
    ]
   },
   {
