update the arcgis online section

--- a/5day_forecast.ipynb
+++ b/5day_forecast.ipynb
@@ -435,7 +435,7 @@
     "    # Generate raster line. See CalculateBoundary docstring for more info\n",
     "    boundary = CalculateBoundary(dem, clip_dem_ras, inund_polygon, cell_size, numIterations, slopeTH)\n",
     "    arcpy.AddMessage('Calculated Boundary')\n",
-    "   \n",
+    "\n",
     "    #   arcpy.env.extent = arcpy.Extent(dem.extent.XMin, dem.extent.YMin, dem.extent.XMax, dem.extent.YMax)\n",
     "    # Convert boundary, i.e., raster line to int for cost allocation function. It only takes int rasters\n",
     "    MULTIPLIER = 10000\n",
@@ -489,7 +489,14 @@
     "    with arcpy.EnvManager(snapRaster=clip_dem_ras):\n",
     "        arcpy.conversion.PolylineToRaster(polyline, 'FID', 'linerast15', \"MAXIMUM_LENGTH\", \"NONE\", cell_size)\n",
     "    raster_polyline = Raster('linerast15')\n",
-    "    raster_polyline.save(\"polyline.tif\")\n",
+    "    try:\n",
+    "    # Assuming raster_polyline is created somewhere above this\n",
+    "        if raster_polyline is not None:\n",
+    "            raster_polyline.save(\"polyline.tif\")\n",
+    "        else:\n",
+    "            print(\"raster_polyline is None or invalid.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred while saving the raster polyline: {e}\")\n",
     "    # The input whose values will be used as the output cell values if the condition is false.\n",
     "    inFalseConstant = '#'\n",
     "    where_clause = 'VALUE >= 0'\n",
